Adding container status to pipeline
